[tool.poetry]
name = "mitx-6.86x"
version = "0.1.0"
description = ""
authors = ["MattiooFR <dugue.mathieu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
scipy = "^1.5.2"
torch = "^1.6.0"
torchvision = "^0.7.0"
tqdm = "^4.49.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
